# tempfiles_cmdline

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/tempfiles-cmdline/: __init__.py
src/tempfiles_cmdline/: __init__.py  tempfiles.py  utils.py
src/tempfiles_cmdline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tempfiles_conf/: __init__.py  configuration.py
tests/test_tempfiles_cmdline/: __init__.py  test_utils.py
tests/test_tempfiles_conf/: test_config.py
